<resources>
    <string name="app_name">A&amp;S</string>

    <!--Homescherm-->
    <string name="home_button">Start A&amp;S-checklist</string>
    <string name="home_titel">        Welkom bij de A&amp;S App!</string>
    <string name="home_toelichting">
Deze ‘Aansluiten &amp; Stimuleren’-App is bedoeld voor ouders en begeleiders van mensen met een ernstig meervoudige beperking (EMB). Soms is het moeilijk om het gedrag, de behoeften en het spanningsniveau van een persoon met EMB te ‘lezen’. De App helpt hierbij en geeft handvatten om met het eigen gedrag aan te sluiten bij het gedrag van het kind / de cliënt.
\n\nVeel succes!
\n\nVragen en/of opmerkingen? Neem gerust contact op met ons! (info@socialerelatiesenict.nl)</string>

    <!--Auteursrechten-->
    <string name="auteursrechten_toelichting"> Auteursrechten: T. Doodeman, H. Blom-Yoo &amp; P. Sterkenburg. Afdeling ontwikkelingspedagogiek, Vrije Universiteit Amsterdam: November 2018
    Samenwerkingspartners: </string>

    <!--Uitleg scherm-->
    <!--Button Uitlegscherm-->
    <string name="uitleg_button">Verder</string>
    <string name="uitleg_titel">Hoe werkt de A&amp;S-checklist </string>
    <string name="uitleg_toelichting">
        \u2022 Observeer de houdingsvormen, gedragingen, bewegingen, geluiden en acties van de persoon met EMB.\n
        \n
        \u2022 Zoek onder de 13 categorieën de items op die van toepassing en beoordeel het spanningsniveau per geobserveerd item (niet alle items worden dus ingevuld, alleen de items die van toepassing zijn!).\n
        \n
        \u2022 Klik op \'doorgaan\' als alle items die van toepassing zijn, zijn gescoord.\n
        \n
        \u2022 Er verschijnt een overzicht van het spanningsniveau van de geobserveerde persoon en handvaten voor de ouder/begeleider om aan te sluiten bij dat spanningsniveau.
</string>

    <!--Start scherm-->
    <string name="start_buttonverder">Start</string>

    <string name="start_placeholderObservator">Naam Observator</string>
    <string name="start_placeholderClient">Naam Cliënt</string>
    <string name="start_placeholderDatum">Datum</string>
    <string name="start_placeholderEmail">Email</string>

    <string name="start_radioclient">Alléén cliënt-observatie</string>
    <string name="start_radiovideo">Videofeedback-observatie</string>

    <string name="start_textClient">De A&amp;S-checklist is op twee verschillende manieren te gebruiken;\n\n1. Door een ouder/begeleider in interactie met de persoon met EMB, alléén de cliënt wordt geobserveerd.</string>
    <string name="start_textVideo">2. Voor gebruik tijdens een videofeedbacksessie, zowel de cliënt als de ouder/begeleider wordt geobservererd.</string>
    <string name="start_textStartchecklist">Maak uw keuze en start de A&amp;S-checklist!</string>


    <!--Overview scherm-->
    <string name="overview_spanningsniveau">Spanningsniveau</string>
    <string name="overview_aantal">Aantal keer gescoord</string>
    <string name="overview_NegatiefOverspannen">Negatief Overspannen</string>
    <string name="overview_NegatiefGespannen">Negatief Gespannen</string>
    <string name="overview_NegatiefLichtGespannen">Negatief Licht Gespannen</string>
    <string name="overview_Neutraal">Neutraal / Ontspannen</string>
    <string name="overview_PositiefLichtGespannen">Positief Licht Gespannen</string>
    <string name="overview_PositiefGespannen">Positief Gespannen</string>
    <string name="overview_PositiefOverspannen">Positief Overspannen</string>

    <!--Informatie-->
    <string name="InformatieRoodMate">Overspannen : De cliënt is overprikkeld en gaat door het lint. De cliënt heeft geen controle meer over zijn/haar gedrag. Dit komt tot uiting door schreeuwen, agressie naar de begeleider (schoppen, slaan, bijten etc.) of verwonding van zichzelf (krabben, bijten etc.).</string>
    <string name="InformatieRoodRichting">Zeer negatieve spanning – (zeer) hoge negativiteit: De cliënt toont duidelijk een (zeer) negatieve expressie. De cliënt is boos, kwaad, woest, (extreem) gefrustreerd, (zeer) angstig, gestrest of overspannen. De cliënt toont (licht) agressief/aanvallend gedrag naar de begeleiding en de cliënt kan de controle over zijn/haar gedrag verliezen; de cliënt schreeuwt/gilt, gooit met voorwerpen, maakt dingen stuk, vernield zijn/haar omgeving, huilt, is ontroostbaar, beeft (oncontroleerbaar) of verwondt zichzelf (ernstig).</string>

    <string name="InformatieOranjeMate">Gespannen: De cliënt is alert, reageert op de interactie met de begeleider of op prikkels uit de omgeving. Deze score past bij een cliënt die duidelijk emotie toont (verdriet, boosheid, etc.). De cliënt laat de emotie in zijn/haar gedrag zien door te gillen of door te huilen. De cliënt geeft non-verbaal uiting aan een sterke mate van ongenoegen. </string>
    <string name="InformatieOranjeRichting">Negatieve spanning – lage tot hoge negativiteit: De cliënt uit (zware) irritatie of (een lichte mate van) frustratie, boosheid of stress. De cliënt wijst (bepaalde) activiteiten (resoluut) af of ontwijkt deze door voorwerpen weg te gooien of van zich af te duwen. De cliënt wijst interactie met de begeleider (resoluut) af of vermijdt dit, bijvoorbeeld door zich af te wenden van de begeleider, door afstand te creëren tussen zichzelf en de begeleider, door weg te lopen bij de begeleider of activiteit of door de begeleider fysiek af te weren (wegduwen). De cliënt werkt niet mee. De cliënt maakt protesterende, geïrriteerde, gefrustreerde of boze geluiden of verbaliseert protest, irritatie, frustratie of boosheid. De vocalisaties van de cliënt kunnen zacht en/of monotoon zijn, maar kunnen ook variëren in toon en volume. </string>

    <string name="InformatieGeelMate">Licht gespannen: De cliënt is alert, reageert op de interactie met de begeleider of op prikkels uit de omgeving. De cliënt is expressief in emotie (maakt negatieve geluiden, wegtrekken hand, etc.).</string>
    <string name="InformatieGeelRichting">Een beetje negatieve spanning – (erg) lage negativiteit: De cliënt laat een lichte mate van negativiteit zien; een beetje negatieve emotie. De cliënt vindt het niet zo leuk, is (wat) verveelt, toont desinteresse voor objecten of interactie met de begeleider, doet niet mee aan interactie of ontwijkt de interactie met de begeleider (bijvoorbeeld door wegtrekken van hand). Mogelijk uit de cliënt ontevredenheid, verveling of lichte irritatie verbaal of vocaal. </string>

    <string name="InformatieBlauw">Lage alertheid (pos./neg.) De cliënt is passief en toont (bijna) geen reactie op de prikkels uit de omgeving of op de interactie met de begeleider. De cliënt is slaperig, in slaap of gaat op in zijn/haar eigen wereld. Onderprikkeld (pos./neg.) De cliënt toont weinig reactie op de interactie met de begeleider of op prikkels uit de omgeving, maar geeft wel lichte uiting van emotie (tevredenheid of ontevredenheid). De cliënt beweegt wat onrustig, ongeacht of de emotie positief of negatief is. Als de cliënt reactie toont, is deze reactie van de cliënt kort, wordt de aandacht van de cliënt niet vastgehouden of blijft een nieuwe reactie bij directe herhaling van de prikkel uit. Alert en actief (pos./neg.) De cliënt is alert en laat een lichte mate van emotie zien (bv. ongenoegen of interesse). De cliënt toont interesse in de aangeboden prikkels en reageert op de prikkels. De cliënt is op de begeleider gericht, maar de interactie gaat niet over en weer tussen de cliënt en de begeleider. </string>

    <string name="InformatieGroenMate">Licht gespannen: De cliënt is alert, reageert op de interactie met de begeleider of op prikkels uit de omgeving. De cliënt is expressief in emotie (in handen klappen, (glim)lachen, positieve geluiden maken, etc.) </string>
    <string name="InformatieGroenRichting">Beetje positieve spanning – (erg) lage positiviteit: De cliënt is kalm, aandachtig en ontspannen. De cliënt wijst interactie of activiteiten niet af. De cliënt is weinig reactief, maar toont aandacht of (een lichte mate van) interesse in activiteiten en/of interactie. De cliënt kan vluchtig contact met de begeleider maken, bijvoorbeeld door kort aantikken van de begeleider of door op een zachte toon en met weinig variatie te vocaliseren of verbaliseren. </string>

    <string name="InformatieRozeMate">Gespannen: De cliënt is alert, reageert op de interactie met de begeleider of op prikkels uit de omgeving. Deze score past bij een cliënt die duidelijk emotie toont (blijdschap, enthousiasme, etc.). De cliënt laat de emotie in zijn/haar gedrag zien door hard te lachen, te gillen, etc. De cliënt geeft non-verbaal uiting aan een sterke mate van blijdschap.</string>
    <string name="InformatieRozeRichting">Positieve spanning – lage tot hoge positiviteit: De cliënt is tevreden, blij, opgewekt of licht geamuseerd. De cliënt uit positieve expressie door te (glim)lachen, in handen te klappen, op een gevarieerde en duidelijke/harde toon te vocaliseren of verbaliseren, positief te reageren op activiteiten en/of interactie met de begeleider, mee te doen en/of aandacht te vragen. De cliënt maakt contact met de begeleider door duidelijk en op een gevarieerde toon te vocaliseren, op neutrale toon te praten, door de nabijheid van begeleider te zoeken, de begeleider te imiteren of door de begeleider aan te raken, bijvoorbeeld vastpakken van de hand van de begeleider. De cliënt neemt (actief) initiatief tot interactie, contact of activiteiten. Soms gaat de interactie tussen de cliënt en de begeleider over en weer, reageert de cliënt actief op de begeleider en is zowel verbaal als non-verbaal expressief. </string>

    <string name="InformatiePaarsMate">Gespannen: De cliënt is alert, reageert op de interactie met de begeleider of op prikkels uit de omgeving. Deze score past bij een cliënt die duidelijk emotie toont (blijdschap, enthousiasme, etc.). De cliënt laat de emotie in zijn/haar gedrag zien door hard te lachen, te gillen, etc. De cliënt geeft non-verbaal uiting aan een sterke mate van blijdschap. </string>
    <string name="InformatiePaarsRichting">Positieve spanning – lage tot hoge positiviteit: De cliënt is tevreden, blij, opgewekt of licht geamuseerd. De cliënt uit positieve expressie door te (glim)lachen, in handen te klappen, op een gevarieerde en duidelijke/harde toon te vocaliseren of verbaliseren, positief te reageren op activiteiten en/of interactie met de begeleider, mee te doen en/of aandacht te vragen. De cliënt maakt contact met de begeleider door duidelijk en op een gevarieerde toon te vocaliseren, op neutrale toon te praten, door de nabijheid van begeleider te zoeken, de begeleider te imiteren of door de begeleider aan te raken, bijvoorbeeld vastpakken van de hand van de begeleider. De cliënt neemt (actief) initiatief tot interactie, contact of activiteiten. Soms gaat de interactie tussen de cliënt en de begeleider over en weer, reageert de cliënt actief op de begeleider en is zowel verbaal als non-verbaal expressief. </string>
<!--Button Adviesscherm-->
    <string name="Advies_button">Verder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">OVERVIEW PAGE</string>
<!--Bedanktscherm-->
    <string name="Bedankt_titel">        Bedankt!</string>
    <string name="Bedankt_toelichting">Bedankt voor het gebruiken van de A&amp;S-app! We hopen dat het u heeft geholpen.\n
    </string>
    <string name="Bedankt_button">PDF-bestand verzenden</string>
    <string name="Bedankt1_toelichting">Vragen en/of opmerkingen? Neem gerust contact op met ons! (info@socialerelatiesenict.nl)</string>
</resources>
